updated AttemptToUnsetTheReleaseWithAnEmptyString_Test for new exitCode/stdout/stderr updates from bug 1119688